--- a/src/environment/environment.ts.example
+++ b/src/environment/environment.ts.example
@@ -10,6 +10,6 @@ export const environment = {
     /*
     * The name of the storage key used by BoxTokenStorageService 
     */
-    BoxTokenStorageKeyName: 'BOXAPP'.
-    BoxEnterpriseId: '*******',
+    BoxTokenStorageKeyName: 'BOXAPP',
+    BoxEnterpriseId: '*******'
 };
