--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "^19.1.1",
     "@angular/router": "^19.1.1",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ng-icons/bootstrap-icons": "^30.3.0",
+    "@ng-icons/core": "^30.3.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "box-typescript-sdk-gen": "^1.10.0",
